--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 async-timeout==4.0.2
 Deprecated==1.2.13
 Django==4.0.4
+django-dotenv==1.4.2
 djongo==1.3.6
 packaging==21.3
 psycopg2==2.9.3
