--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,45 @@
 asgiref==3.5.0
+asttokens==2.0.5
 async-timeout==4.0.2
+backcall==0.2.0
+colorama==0.4.4
+debugpy==1.6.0
+decorator==5.1.1
 Deprecated==1.2.13
 Django==4.0.4
 django-dotenv==1.4.2
 djongo==1.3.6
+entrypoints==0.4
+executing==0.8.3
+ipykernel==6.13.0
+ipython==8.3.0
+jedi==0.18.1
+jupyter-client==7.3.1
+jupyter-core==4.10.0
+matplotlib-inline==0.1.3
+nest-asyncio==1.5.5
+numpy==1.22.4
 packaging==21.3
+pandas==1.4.2
+parso==0.8.3
+pickleshare==0.7.5
+prompt-toolkit==3.0.29
+psutil==5.9.1
 psycopg2==2.9.3
+pure-eval==0.2.2
+Pygments==2.12.0
 pymongo==4.1.1
 pyparsing==3.0.8
+python-dateutil==2.8.2
+pytz==2022.1
+pywin32==304
+pyzmq==23.0.0
 redis==4.2.2
+six==1.16.0
 sqlparse==0.2.4
+stack-data==0.2.0
+tornado==6.1
+traitlets==5.2.1.post0
 tzdata==2022.1
+wcwidth==0.2.5
 wrapt==1.14.0
